Pass AttributeEngineTest